KubernetesTask/juice-shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - name: juice-shop
        image: bkimminich/juice-shop
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
