KubernetesTask/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: default
  labels:
    app: juice-shop
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: juice-shop
  type: ClusterIP
status:
  loadBalancer: {
